[package]
name = "kcp-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kcp_tunc"
path = "src/bin/client.rs"

[[bin]]
name = "kcp_tuns"
path = "src/bin/server.rs"

[dependencies.kcp-rust]
path = "../kcp-rust"

[profile.release]
lto = true
debug = false
rpath = false
incremental = false
overflow-checks = false
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version =  "1.33.0", features = ["full"]}
clap = { version = "4.4.6", features = ["derive"] }


